Use g++ rather than gcc; add install rule

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,6 +2,13 @@
 # This makefile assumes the GNU Multiprecision Library is installed where
 # the linker can find it, and that the 'make' command has the usual defaults
 # for building executables from C++ source code.
+CC = g++
+CXX = g++
+CFLAGS = -Wall -g -I ~/GMP/include
+CXXFLAGS = $(CFLAGS)
+LDFLAGS = -L ~/GMP/libi
+LDLIBS = -l gmp
 
-LDFLAGS = -l gmp
+install: btd dtb
+	mv btd dtb ../bin
 all: btd dtb
